# crabot

./: Cargo.toml  README.md  docker-compose.yml  init.sql  start.sh
.devcontainer/: devcontainer.json
src/: error.rs  lib.rs  main.rs
src/admin/models/: department.rs  employee.rs  mod.rs
src/core/: mod.rs
src/core/dag/: dag.rs  mod.rs  node.rs
src/core/daos/: job.rs  llm.rs  message.rs  mod.rs  session.rs  skill.rs  worker.rs
src/core/domains/: job.rs  message.rs  mod.rs  session.rs  skill.rs  worker.rs
src/core/models/: job.rs  llm.rs  message.rs  mod.rs  session.rs  skill.rs  worker.rs
src/core/services/: mod.rs
src/core/skills/: mod.rs
src/database/: company_db.rs  db.rs  department_db.rs  employee_db.rs  mod.rs  sales_db.rs  schema.rs  skill_db.rs
src/middleware/: database.rs  mod.rs  rig.rs
src/models/: company.rs  department.rs  employee.rs  mod.rs  skill.rs
src/services/: hr_service.rs  mod.rs  promotion_service.rs  sales_service.rs
src/utils/: error.rs  json.rs  mod.rs  task.rs  task_local.rs
