[package]
name = "crabot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rbs = { version = "4"}
rbatis = { version = "4.7"}
rbdc-mysql = { version = "4.7" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
fast_log = "1.6"
anyhow = "1.0.102"
rig-core = "0.32.0"
